Fix bugs v0.9, and changed font sizes on mobile version

--- a/src/components/Header/Header.less
+++ b/src/components/Header/Header.less
@@ -8,6 +8,7 @@
   align-items: center;
   z-index: 1;
   flex-direction: column;
+  margin-top: 16px;
 
   &-Elements {
     display: flex;
