--- a/src/components/HeaderNavItem/HeaderNavItem.less
+++ b/src/components/HeaderNavItem/HeaderNavItem.less
@@ -3,7 +3,7 @@
   font-size: 14px;
   letter-spacing: -0.025em;
   color: #ffffff;
-  margin: 27px 0 27px 35px;
+  margin-left: 27px;
   display: flex;
   transition: 0.5s;
   cursor: pointer;
